test/io/marybeth/testreadln5.good
testreadln5.chpl:5: error: halt reached - ***Error: You must open ".//test.dat" before trying to read from it***
